Fix achievement spacing and decimal

--- a/static/css/community.css
+++ b/static/css/community.css
@@ -192,8 +192,8 @@
   outline: #3d3b46;
   outline-width: 2px;
   outline-style: solid;
-  margin-top: 4%;
-  margin-bottom: 4%;
+  margin-top: 32px;
+  margin-bottom: 16px;
   width: 90%;
   display: flex;
   flex-direction: column;
